--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2",
   "api_version": "1",
   "name": "Windows switcher",
-  "description": "Search the open windows and quickly switch to it",
+  "description": "Search the open windows and quickly switch to it. (See README for installation dependencies)",
   "developer_name": "Jean-Michel Bea",
   "icon": "images/icon.png",
   "options": {
