fix the code to work with python3 and APIv2

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": "2",
-  "api_version": "1",
+  "required_api_version": "^2.0.0",
   "name": "Windows switcher",
   "description": "Search the open windows and quickly switch to it. (See README for installation dependencies)",
   "developer_name": "Jean-Michel Bea",
