chore: add dev settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,6 @@
         "esbenp.prettier-vscode",
         "yzhang.markdown-all-in-one",
         "davidanson.vscode-markdownlint",
-        "emeraldwalk.runonsave",
+        "emeraldwalk.runonsave"
     ]
 }
